<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@color/grey_back">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/tracker_back">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/profile"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/ic_outline_account_circle_24"
            style="@style/Widget.App.Toolbar"
            android:background="@drawable/tracker_back"
            />

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/personal_details"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/topBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        app:cardCornerRadius="20dp"
        >

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <ImageView
            android:id="@+id/profile_Photo"
            android:contentDescription="@string/profile_photo_of_user"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/photo_back"
            android:fitsSystemWindows="true" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center"
            android:fontFamily="@font/robotocondensed_bold"
            android:textColor="@color/purple_500"/>

        <TextView
            android:layout_gravity="center"
            android:id="@+id/profile_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_tech_cse"
            android:fontFamily="@font/robotocondensed_light"
            android:textColor="@color/theme_2_light"/>
        <TextView
            android:layout_gravity="center"
            android:id="@+id/profile_institute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skit"
            android:gravity="center"
            android:fontFamily="@font/robotocondensed_light"
            android:textColor="@color/theme_2_light"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        app:layout_constraintTop_toBottomOf="@+id/personal_details"
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#9F4C4C4C"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:id="@+id/subjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/subjects"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"/>
    <androidx.recyclerview.widget.RecyclerView
        tools:listitem="@layout/subject_element"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/subjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_content_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/white"
        android:text="@string/add_subject"
        app:borderWidth="1dp"
        app:icon="@drawable/ic_baseline_add_24"
        app:fabSize="auto"/>
</androidx.constraintlayout.widget.ConstraintLayout>