<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grey_back">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/tracker_back">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/ic_outline_account_circle_24"
            style="@style/Widget.App.Toolbar"
            android:background="@drawable/tracker_back"
            />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tracker"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBarLayout"
        android:background="@drawable/tracker_back">

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tracker"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.core.widget.NestedScrollView
                android:background="#fff"
                android:id="@+id/hori_option"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingVertical="20dp"
                android:paddingHorizontal="10dp"
                android:orientation="horizontal"
                android:scrollbarAlwaysDrawHorizontalTrack="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:backgroundTint="#1274C3">

                <LinearLayout
                    android:id="@+id/classSchedule"
                android:layout_marginHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:gravity="center">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/class_schedule"
                        style="@style/OptionsStyle"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/links"
                        android:textColor="#fff"
                        android:textAppearance="?attr/textAppearanceBody2"
                        />
                </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:backgroundTint="#673AB7"
                    android:layout_marginStart="10dp">

                    <LinearLayout
                        android:layout_marginHorizontal="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:gravity="center">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/assignments"
                            style="@style/OptionsStyle"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/list"
                            android:textColor="#fff"
                            android:textAppearance="?attr/textAppearanceBody2"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>



            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                app:cardCornerRadius="5dp"
                android:background="#fff"
                android:id="@+id/upc_cls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/hori_option">
                <TextView
                    android:padding="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pending_assignments"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="5dp"
                android:layout_marginTop="20dp"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/upc_cls">
                <TextView
                    android:padding="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming_classes"/>
            </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>